<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".RegisterScreen">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <ImageView
            android:layout_width="200dp"
            android:layout_marginStart="92dp"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo_login"
            android:contentDescription="logo" />
    </RelativeLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="150dp"
    android:layout_marginStart="35dp"
    >

    <TextView
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginStart="50dp"
        android:fontFamily="@font/monotype_madera_light"
        android:text="@string/new_account"
        android:textColor="@color/orange"
        android:textSize="29sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginStart="50dp"
        android:fontFamily="@font/monotype_madera_bold"
        android:text="@string/full_name_text"
        android:textColor="@color/orange"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/new_acc_name"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="160dp"
        android:backgroundTint="@color/orange"
        android:ems="12"
        android:fontFamily="@font/monotype_madera_light"
        android:hint="@string/abdullah_rizwan"
        android:inputType="text"
        android:textColor="@color/orange"
        android:textColorHint="#60432F">

    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginStart="50dp"
        android:fontFamily="@font/monotype_madera_bold"
        android:text="@string/email_address"
        android:textColor="@color/orange"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/new_acc_email"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="240dp"
        android:backgroundTint="@color/orange"
        android:ems="12"
        android:fontFamily="@font/monotype_madera_light"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/orange"
        android:textColorHint="#60432F">

    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginStart="50dp"
        android:fontFamily="@font/monotype_madera_bold"
        android:text="@string/phone_number"
        android:textColor="@color/orange"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/new_acc_number"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="320dp"
        android:backgroundTint="@color/orange"
        android:ems="12"
        android:fontFamily="@font/monotype_madera_light"
        android:hint="@string/number_hint"
        android:inputType="number"
        android:textColor="@color/orange"
        android:textColorHint="#60432F"
        >
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:layout_marginStart="50dp"
        android:fontFamily="@font/monotype_madera_bold"
        android:text="@string/password"
        android:textColor="@color/orange"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/new_acc_password"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="400dp"
        android:backgroundTint="@color/orange"
        android:ems="12"
        android:fontFamily="@font/monotype_madera_light"
        android:hint="* * * * * * * * * * * * * *"
        android:inputType="textPassword"
        android:textColor="@color/orange"
        android:textColorHint="#60432F"
        tools:ignore="TextFields">
    </EditText>

    <Button
        android:id="@+id/registered_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="460dp"
        android:text="PROCEED ➪"
        android:fontFamily="@font/monotype_madera_bold"
        android:textColor="@color/orange"
        android:shadowColor="@color/orange"
        android:backgroundTint="@color/black"
        >

    </Button>

</RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>