<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black"
        >
        <ImageView
            android:id="@+id/logo"
            android:layout_width="500dp"
            android:layout_height="700dp"
            android:layout_gravity="center"
            android:layout_marginTop="-300dp"
            android:scaleType="fitCenter"
            android:paddingTop="400dp"
            android:src="@drawable/logo_login"
            />

        <EditText
            android:id="@+id/username_input"
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/orange"
            android:ems="12"
            android:fontFamily="@font/monotype_madera_bold"
            android:hint="EMAIL"

            android:textColor="@color/orange"
            android:textColorHint="#60432F">
        </EditText>

        <EditText
            android:id="@+id/password_input"
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/orange"
            android:ems="12"
            android:fontFamily="@font/monotype_madera_bold"
            android:hint="@string/password"

            android:textColor="@color/orange"
            android:textColorHint="#60432F">

        </EditText>

        <Button
            android:id="@+id/login_button"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:fontFamily="@font/monotype_madera_bold"
            android:textSize="15sp"
            android:backgroundTint="@color/orange"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register"
            android:fontFamily="@font/monotype_madera_bold"
            android:textSize="15sp"
            android:backgroundTint="@color/orange"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/login_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="25dp"
            android:text="WOW"
            android:fontFamily="@font/monotype_madera_bold"
            android:textColor="@color/orange"
            android:textSize="50dp"
            android:visibility="invisible"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>